--- a/AppBar/res/layout/app_bar_notification.xml
+++ b/AppBar/res/layout/app_bar_notification.xml
@@ -8,26 +8,36 @@
   <ImageButton android:id="@+id/app1"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
-  	android:layout_weight="1"/>
+  	android:layout_weight="1"
+  	android:background="@android:color/transparent"
+  	android:scaleType="fitCenter"/>
   
   <ImageButton android:id="@+id/app2"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
-  	android:layout_weight="1"/>
+  	android:layout_weight="1"
+  	android:background="@android:color/transparent"
+  	android:scaleType="fitCenter"/>
   
   <ImageButton android:id="@+id/app3"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
-  	android:layout_weight="1"/>
+  	android:layout_weight="1"
+  	android:background="@android:color/transparent"
+  	android:scaleType="fitCenter"/>
   
   <ImageButton android:id="@+id/app4"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
-  	android:layout_weight="1"/>
+  	android:layout_weight="1"
+  	android:background="@android:color/transparent"
+  	android:scaleType="fitCenter"/>
   
   <ImageButton android:id="@+id/app5"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
-  	android:layout_weight="1"/>
+  	android:layout_weight="1"
+  	android:background="@android:color/transparent"
+  	android:scaleType="fitCenter"/>
   
 </LinearLayout>
