--- a/AppBar/res/layout/app_bar_notification.xml
+++ b/AppBar/res/layout/app_bar_notification.xml
@@ -10,34 +10,39 @@
   	android:layout_height="fill_parent"
   	android:layout_weight="1"
   	android:background="@android:color/transparent"
-  	android:scaleType="fitCenter"/>
+  	android:scaleType="fitCenter"
+  	android:padding="5dp"/>
   
   <ImageButton android:id="@+id/app2"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:layout_weight="1"
   	android:background="@android:color/transparent"
-  	android:scaleType="fitCenter"/>
+  	android:scaleType="fitCenter"
+  	android:padding="5dp"/>
   
   <ImageButton android:id="@+id/app3"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:layout_weight="1"
   	android:background="@android:color/transparent"
-  	android:scaleType="fitCenter"/>
+  	android:scaleType="fitCenter"
+  	android:padding="5dp"/>
   
   <ImageButton android:id="@+id/app4"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:layout_weight="1"
   	android:background="@android:color/transparent"
-  	android:scaleType="fitCenter"/>
+  	android:scaleType="fitCenter"
+  	android:padding="5dp"/>
   
   <ImageButton android:id="@+id/app5"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:layout_weight="1"
   	android:background="@android:color/transparent"
-  	android:scaleType="fitCenter"/>
+  	android:scaleType="fitCenter"
+  	android:padding="5dp"/>
   
 </LinearLayout>
